--- a/exercicios/aula12ex/ex015/style.css
+++ b/exercicios/aula12ex/ex015/style.css
@@ -22,9 +22,23 @@ section {
     width: 500px;
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
-
+div#img {
+    text-align: center;
+    padding: 10px;
+}
+img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    background-size: cover;
+}
 footer {
+    width: 100vw;
+    padding: 10px;
     color: white;
     text-align: center;
+    position: fixed;
+    bottom: 0px;
 }
