--- a/exercicios/aula12ex/ex016/style.css
+++ b/exercicios/aula12ex/ex016/style.css
@@ -22,8 +22,21 @@ section {
     width: 500px;
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
+    font-size: 2em;
 }
+
+div {
+    text-align: center;
+    padding: 10px;
+
+}
+
+div#foto img#imagem {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+
 footer {
     width: 100vw;
     padding: 10px;
