--- a/exercicios/aula14ex/ex017/style.css
+++ b/exercicios/aula14ex/ex017/style.css
@@ -20,10 +20,17 @@ section {
     border-radius: 15px;
     padding: 10px;
     width: 500px;
-    height: 400px;
     margin: auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+}
+
+p {
+    margin: 10px 0px 10px 0px;
+}
+
+button {
+    padding: 5px;
 }
 
 footer {
